--- a/src/components/loading/index.less
+++ b/src/components/loading/index.less
@@ -3,7 +3,7 @@
   width: 30px;
   height: 30px;
   position: relative;
-  border: 4px solid #fff;
+  border: 4px solid #1890ff;
   top: 50%;
   animation: loader 2s infinite ease;
 }
